Finished Landing Page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Indie Brew | Codewell Challenge</title>
   </head>
   <body class="font-DM text-lg">
-    <header class="bg-hero bg-cover bg-no-repeat">
+    <header class="bg-hero bg-cover bg-no-repeat mb-20">
       <div class="container py-10 mx-auto px-4">
         <nav class="flex justify-between items-center mb-10 lg:mb-20">
           <img src="./Assets/Logo.svg" alt="IndieBrew Logo" />
@@ -49,7 +49,7 @@
           />
         </nav>
         <!-- HERO Section -->
-        <section class="lg:flex lg:items-center">
+        <section class="lg:flex lg:items-center pb-36">
           <div class="mb-10 lg:mb-0 flex-1 order-2">
             <img
               src="./Assets/Feed Mockup.png"
@@ -96,6 +96,101 @@
         </section>
       </div>
     </header>
+    <main class="container container py-10 mx-auto px-4 md:px-0">
+      <!-- Social Proofs -->
+      <section class="md:flex md:items-center md:justify-between mb-20">
+        <div class="flex-1 md:order-2">
+          <img
+            src="./Assets/Social Media Icons.png"
+            alt="Soical Media Icons"
+            class="mb-8 md:w-3/4 lg:w-3/5 md:mb-0 md:ml-auto"
+          />
+        </div>
+        <div class="flex-1">
+          <h2 class="text-4xl font-bold leading-snug mb-2">
+            Curate your feed from dozens of
+            <span class="md:block"> resources.</span>
+          </h2>
+          <p class="leading-7 text-gray-500 mb-2 lg:w-9/12">
+            We cover all major platforms where one could want to curate their
+            feed from. Reddit, ProductHunt, IndieHackers, and so much more.
+          </p>
+          <a class="font-bold text-indigo-600">See full list of resources →</a>
+        </div>
+      </section>
+      <section class="md:flex md:items-center md:justify-between mb-20">
+        <div class="flex-1 text-center md:text-left">
+          <img
+            src="./Assets/Phone Mockup.png"
+            alt="Mobile Phone"
+            class="mb-8 md:w-3/4 lg:w-3/5 md:mb-0"
+          />
+        </div>
+        <div class="flex-1">
+          <h2 class="text-4xl font-bold leading-snug mb-2">
+            Access your feed from the
+            <span class="md:block"> comfort of your phone.</span>
+          </h2>
+          <p class="leading-7 text-gray-500 mb-2 lg:w-9/12">
+            With native apps for both iOS and Android, accessing your curated
+            content has never been easier.
+          </p>
+          <a class="font-bold text-indigo-600">Sign up for the waitlsit →</a>
+        </div>
+      </section>
+      <footer class="py-16 md:flex md:gap-x-6">
+        <div class="mb-12 md:flex-1">
+          <h3 class="text-2xl font-bold mb-3">IndieBrew</h3>
+          <p class="leading-7 text-gray-500 mb-6">
+            With IndieBrew, get personal feeds from resources all around the
+            web, including Reddit, HackerNews, and much more.
+          </p>
+          <p class="leading-7 text-gray-500 mb-2">Made with ❤️ in the UK.</p>
+        </div>
+        <div
+          class="
+            md:flex-1
+            grid grid-cols-2
+            gap-y-12 gap-x-24
+            md:gap-x-14
+            lg:grid-cols-4
+            lg:gap-x-10
+          "
+        >
+          <div>
+            <h3 class="text-2xl font-bold mb-3">Sitemap</h3>
+            <ul class="space-y-2">
+              <li class="text-gray-500">Homepage</li>
+              <li class="text-gray-500">Pricing</li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-2xl font-bold mb-3">Resources</h3>
+            <ul class="space-y-2">
+              <li class="text-gray-500">Support</li>
+              <li class="text-gray-500">Contact</li>
+              <li class="text-gray-500">FAQ</li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-2xl font-bold mb-3">Company</h3>
+            <ul class="space-y-2">
+              <li class="text-gray-500">About</li>
+              <li class="text-gray-500">Customers</li>
+              <li class="text-gray-500">Blog</li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-2xl font-bold mb-3">Resources</h3>
+            <ul class="space-y-2">
+              <li class="text-gray-500">HackerNews</li>
+              <li class="text-gray-500">Reddit</li>
+              <li class="text-gray-500">Twitter</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </main>
     <script src="/app/script.js"></script>
   </body>
 </html>
