--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#">Pricing</a>
             <a href="#">Support</a>
             <a
-              href="#"
+              href="./signup.html"
               class="
                 bg-indigo-600
                 text-yellow-50
@@ -66,7 +66,7 @@
               web, including Reddit, HackerNews, IndieHackers, and much more.
             </p>
             <a
-              href="#"
+              href="./signup.html"
               class="
                 inline-block
                 bg-indigo-600
