Fixed Path Issues

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/tailwind.css" />
+    <link rel="stylesheet" href="./dist/tailwind.css" />
     <title>Indie Brew | Codewell Challenge</title>
   </head>
   <body class="font-DM text-lg">
@@ -43,7 +43,7 @@
             >
           </div>
           <img
-            src="/Assets/Hamburger Menu.svg"
+            src="./Assets/Hamburger Menu.svg"
             alt="Menu Toggle"
             class="cursor-pointer md:hidden"
             id="toggle"
