--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/tailwind.css" />
+    <link rel="stylesheet" href="./dist/tailwind.css" />
     <title>Signup | IndieBrew</title>
   </head>
   <body class="bg-signup bg-cover">
@@ -33,11 +33,11 @@
       "
     >
       <a href="./index.html">
-        <img src="/Assets/Logo.svg" alt="IndieBrew Logo" />
+        <img src="./Assets/Logo.svg" alt="IndieBrew Logo" />
       </a>
       <a class="md:flex md:items-center cursor-pointer" href="./index.html">
         <img
-          src="/Assets/Back Arrow.svg"
+          src="./Assets/Back Arrow.svg"
           alt="Back Arrow"
           class="bg-white p-3.5 border border-gray-300 rounded-md md:mr-4"
         />
