--- a/index.html
+++ b/index.html
@@ -221,6 +221,6 @@
         </div>
       </footer>
     </main>
-    <script src="/app/script.js"></script>
+    <script src="./app/script.js"></script>
   </body>
 </html>
